<resources>
    <string name="app_name">Inventory App</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book_info">Edit Book Info</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="sale_button">sale</string>

    <string name="category_book_details">Book Details</string>
    <string name="category_supplier">Supplier Info</string>

    <string name="hint_book_title">Book Title</string>
    <string name="hint_book_price">Price $19.99</string>
    <string name="hint_book_quantity">Quantity 10</string>
    <string name="hint_supplier_name">Fantasy Books</string>
    <string name="hint_supplier_phone_number">555&#8211;555&#8211;1234</string>

    <string name="empty_view_main_text">Adventure to another world seems to be missing!</string>
    <string name="empty_view_helper_text">There is nothing in the inventory,
    get started by adding a book.</string>

    <string name="error_book">Error with saving book info</string>
    <string name="saved_book">Book info saved!</string>
    <string name="update_error">Error with updating book info</string>
    <string name="update_saved">Book updated successfully!</string>
    <string name="delete_error">Error with deleting book info</string>
    <string name="delete_success">Book deleted</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this Book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="decrease_button">&#8212;</string>
    <string name="increase_button">+</string>
    <string name="order_button">order</string>
    <string name="edit_button">edit</string>
    <string name="delete_button">delete</string>
    <string name="quantity_label">Quantity</string>
    <string name="out_of_stock">Product is out of stock</string>
    <string name="details_title">Details</string>

    <string name="valid_data">Enter valid data</string>
    <string name="enter_valid_title">Enter valid book title</string>
    <string name="enter_valid_price">Enter valid price and with a decimal</string>
    <string name="enter_valid_quantity">Enter valid quantity</string>
    <string name="enter_valid_supplier_name">Enter valid supplier name</string>
    <string name="enter_valid_supplier_phone_number">Enter valid supplier phone number</string>

</resources>
