<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book_details" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
